force-app/main/default/objects/NV_Component__c/NV_Component__c.object-meta.xml
<CustomObject>
    <description>Service Cloud needs Asset info withMAC addresses from Asset File. 

For Drive Constellation
DGX1
DGX2</description>
    <label>Component</label>
    <nameField>
        <displayFormat>C-{0000000000}</displayFormat>
        <label>Component No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>