force-app/main/default/objects/NV_Component__c/fields/Asset_Name__c.field-meta.xml
<CustomField>
    <fullName>Asset_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Name</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Components</relationshipLabel>
    <relationshipName>Components</relationshipName>
    <type>Lookup</type>
</CustomField>