force-app/main/default/objects/NV_Component__c/fields/Asset_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Asset_Serial_Number__c</fullName>
    <externalId>true</externalId>
    <label>Asset Serial Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>