force-app/main/default/objects/NV_Component__c/fields/Component_Part__c.field-meta.xml
<CustomField>
    <fullName>Component_Part__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Component_Part</label>
    <referenceTo>Part__c</referenceTo>
    <relationshipLabel>Components (Component_Part)</relationshipLabel>
    <relationshipName>Components1</relationshipName>
    <type>Lookup</type>
</CustomField>