force-app/main/default/objects/NV_Component__c/fields/Component_PN__c.field-meta.xml
<CustomField>
    <fullName>Component_PN__c</fullName>
    <label>Component PN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>