force-app/main/default/objects/NV_Component__c/fields/Component_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Component_Serial_Number__c</fullName>
    <label>Component Serial Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>