force-app/main/default/objects/NV_Component__c/fields/Component_Type_Category__c.field-meta.xml
<CustomField>
    <fullName>Component_Type_Category__c</fullName>
    <label>Component Type / Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>