force-app/main/default/objects/NV_Component__c/fields/Link_Asset__c.field-meta.xml
<CustomField>
    <fullName>Link_Asset__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Link Asset</label>
    <type>Checkbox</type>
</CustomField>