force-app/main/default/objects/NV_Component__c/fields/Material_Number__c.field-meta.xml
<CustomField>
    <fullName>Material_Number__c</fullName>
    <label>Material Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>