force-app/main/default/objects/NV_Component__c/fields/MFGLine__c.field-meta.xml
<CustomField>
    <fullName>MFGLine__c</fullName>
    <label>MFGLine</label>
    <length>50</length>
    <type>Text</type>
</CustomField>