force-app/main/default/objects/NV_Component__c/fields/S_Component_PN__c.field-meta.xml
<CustomField>
    <fullName>S_Component_PN__c</fullName>
    <label>S Component PN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>