force-app/main/default/objects/NV_Component__c/fields/System_Part__c.field-meta.xml
<CustomField>
    <fullName>System_Part__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>System_Part</label>
    <referenceTo>Part__c</referenceTo>
    <relationshipLabel>Components</relationshipLabel>
    <relationshipName>Components</relationshipName>
    <type>Lookup</type>
</CustomField>