force-app/main/default/objects/NV_Component__c/fields/Transmission_Time__c.field-meta.xml
<CustomField>
    <fullName>Transmission_Time__c</fullName>
    <label>Transmission Time</label>
    <length>100</length>
    <type>Text</type>
</CustomField>