force-app/main/default/objects/NV_Component__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Component_Name__c</columns>
    <columns>Component_PN__c</columns>
    <columns>Component_Serial_Number__c</columns>
    <columns>Component_Type_Category__c</columns>
    <columns>ExternalID__c</columns>
    <columns>Material_Number__c</columns>
    <columns>MFGLine__c</columns>
    <columns>S_Component_PN__c</columns>
    <columns>Station__c</columns>
    <columns>System_Part__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>