force-app/main/default/objects/NV_Component__c/listViews/Find_Asset_by_System_SerialNumber.listView-meta.xml
<ListView>
    <fullName>Find_Asset_by_System_SerialNumber</fullName>
    <columns>NAME</columns>
    <columns>Asset_Serial_Number__c</columns>
    <columns>Component_Part__c</columns>
    <columns>Component_Name__c</columns>
    <columns>Component_PN__c</columns>
    <columns>Component_Serial_Number__c</columns>
    <columns>Component_Type_Category__c</columns>
    <columns>ExternalID__c</columns>
    <columns>Material_Number__c</columns>
    <columns>MFGLine__c</columns>
    <columns>S_Component_PN__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Asset_Serial_Number__c</field>
        <operation>equals</operation>
        <value>1572220000510</value>
    </filters>
    <label>Find Asset by System SerialNumber</label>
</ListView>